--- a/unpacked/popup.html
+++ b/unpacked/popup.html
@@ -12,10 +12,10 @@
 		<h2 class="heading">Instruction</h2>
 		<ul>
 			<li>
-				The extension works in devtool environment, so it can read the resources information. You will need to <span class="success">restart your browser</span> or re-open developer tool panel, and switch to the <span class="success">Resource Saver</span> tab.
+				The extension works in devtool environment, so it can read the resources information. You will need to <span class="success">restart your browser</span> or re-open developer tool panel, and switch to the <span class="success">Extract Saver</span> tab.
 			</li>
 			<li>
-				All resources will be saved in <span class="success">"Downloads / All Resources"</span> folder with specific domain name folder.
+				All resources will be saved in the <span class="success">"~/Downloads/All Resources"</span> folder with specific domain names.
 			</li>
 			<li>
 				Tick <span class="success">"Download from all domains ..."</span> to download all resources from all domains.
@@ -28,8 +28,8 @@
       </li>
 		</ul>
 		<div>
-      <a class="sub-title" href="https://github.com/up209d" target="_blank">
-        Version: 0.1.4 by U.P
+      <a class="sub-title" href="https://github.com/kulado" target="_blank">
+        Version: 5.3.19 by Kulado Inc.
       </a>
       </div>
 	</div>
